--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="description" content="The best restaurant in the world"/>
+    <meta property="og:title" content="Little Lemon"/>
+    <meta property="og:description" content="The best restuarant"/>
+    <meta property="og:image" content="https://marimelle.github.io/little-lemon/logos/little-lemon-yellow-logo2.png"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
